--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "massive": "^5.5.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
