--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "massive": "^5.5.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
