--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "fibbage",
   "version": "0.1.0",
   "private": true,
+  "main": "server/server.js",
+  "proxy": "http://localhost:4762",
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "http-proxy-middleware": "^0.19.1",
     "massive": "^5.5.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -20,7 +23,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "main": "server/server.js",
   "eslintConfig": {
     "extends": "react-app"
   },
